# LCT-GAN

./: README.md  main.py  pyproject.toml
ae_pickles/: Adult_ae64_1000.pickle  Covtype_ae64_500.pickle  Credit_ae64_500.pickle  Credit_ae96_1000.pickle  Intrusion_ae64_500.pickle  Loan_ae32_500.pickle  latent_ae64_1000.pickle  latent_ae64_500.pickle
data/: Adult_decoded.csv  Adult_fake.csv  Adult_fake_best.csv  Adult_fake_gan.csv  Intrusion_fake.csv  Loan.csv  Loan_fake.csv
data/decoded/: Adult_decoded64_10.csv  Adult_decoded64_1000.csv  Adult_decoded64_500.csv  Loan_decoded32_1000.csv  Loan_decoded32_test.csv
gan_pickles/: Adult_gan16_500.pickle  Covtype_gan16_500.pickle  Credit_gan16_500.pickle  Loan_gan16_500.pickle  gan_16_1000_.pickle  gan_16_400.pickle  gan_16_500.pickle  gan_16_600.pickle  gan_16_600_.pickle  gan_16_700_.pickle  gan_32_1000.pickle
results/ae/: Adult_results.txt  Covtype_results.pickle  Covtype_results.txt  Credit_results.pickle  Credit_results.txt  Intrusion_results.pickle  Loan_results.pickle  Loan_results.txt
results/gan/: Adult15_results.txt  Adult30_results.txt  Adult60_results.txt  Adultepoch_results.txt  Covtype15_results.txt  Covtype30_results.txt  Covtype60_results.txt  Covtypeepoch_results.txt  Credit15_results.txt  Credit30_results.txt  Credit60_results.txt  Creditepoch_results.txt  Loan15_results.txt  Loan30_results.txt  Loan60_results.txt  Loanepoch_results.txt
src/models/: architectures.py  autoencoder.py  gan.py
src/utils/: __init__.py  ctabgan_synthesizer.py  evaluation.py  transformer.py
