[tool.poetry]
name = "latentctab-gan"
version = "0.1.0"
description = ""
authors = ["Viktor Velev <viktorvelev8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"
pandas = "^1.4.2"
torch = "^1.11.0"
torchvision = "^0.12.0"
scikit-learn = "^1.0.2"
scipy = "^1.8.0"
seaborn = "^0.11.2"
matplotlib = "^3.5.2"
jupyter = "^1.0.0"
tqdm = "^4.64.0"
dython = "0.6.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
